# SerenLodestar

./: .gitignore  SECURITY.md  SerenLodestar.slnx
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
SerenLodestar/: SerenLodestar.pyproj  pyproject.toml  seren-lodestar.yaml.sample
SerenLodestar/seren_lodestar/: __init__.py  __main__.py  agent_client.py  app.py  cluster.py  config.py  dtos.py
SerenLodestar/seren_lodestar/mcp/: __init__.py  server.py
SerenLodestar/seren_lodestar/routes/: __init__.py  agent_update.py  chat.py  cluster_routes.py  info.py  scheduler.py  services.py  system.py
SerenLodestar/seren_lodestar/scheduling/: __init__.py  scheduled_task.py  scheduler_service.py
SerenLodestar/seren_lodestar/tooling/: __init__.py  i_tool_dialect.py  mcp_tool_client.py  qwen_hermes_dialect.py
SerenLodestar/seren_lodestar/viewer/ui/: body.html  header_aside.html  scripts.js  styles.css  tabs.html
SerenLodestar/tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_smoke.py
