[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seren-lodestar"
dynamic = ["version"]
description = "Cluster head / guiding star for the Seren stack"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Chad Roesler" }]
keywords = ["llm", "cluster", "jetson", "seren"]

dependencies = [
    "mcp>=1.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "starlette>=0.37",
    "croniter>=2.0",
    "seren-meninges>=1.0.0,<2",
    "seren-sinew>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
seren-lodestar = "seren_lodestar.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seren_lodestar*"]

[tool.setuptools.package-data]
seren_lodestar = [
    "viewer/ui/*.html", "viewer/ui/*.css", "viewer/ui/*.js",
    "tooling/*.py",
    "scheduling/*.py",
]

[tool.setuptools_scm]
root = ".."
version_scheme = "release-branch-semver"
version_file = "seren_lodestar/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
